0.5.5 => fix mock system bars appearing, redirect issues, add accesibility group titles, fix clear button visibility

--- a/src/apps/groove.internal.settings/style.scss
+++ b/src/apps/groove.internal.settings/style.scss
@@ -288,6 +288,13 @@ p.text {
     }
 }
 
+p.groups-title {
+    color: var(--metro-foreground);
+    font-size: 35px;
+    font-weight: 300;
+    margin: 6px 0px;
+}
+
 .group {
     position: relative;
     display: flex;
@@ -1035,5 +1042,12 @@ div.color-picker-controls {
     &.t_active {
         background: var(--metro-foreground) !important;
         color: var(--metro-background) !important;
+    }
+}
+
+#clearfont {
+    &.hidden {
+        display: none;
+        visibility: hidden;
     }
 }
